@@ -271,6 +271,11 @@ file(GLOB META_FILES RELATIVE "${CMAKE_HOME_DIRECTORY}" AUTHORS COPYING LICENSE.
 file(GLOB DOC_RST_FILES RELATIVE "${CMAKE_HOME_DIRECTORY}" doc/*.rst)
 string(REPLACE ".rst" ".html" DOC_HTML_FILES "${DOC_RST_FILES}")
 file(GLOB DOC_IMAGE_FILES RELATIVE "${CMAKE_HOME_DIRECTORY}" doc/images/*)
+if(USE_RST2HTML)
+	set(DOC_HTML_FILES_PACKAGE "${DOC_HTML_FILES}")
+else(USE_RST2HTML)
+	set(DOC_HTML_FILES_PACKAGE "")
+endif(USE_RST2HTML)
 set(COLORS_FILES
 	colors.txt
 	heightmap-nodes.txt
@@ -323,7 +328,7 @@ if(WIN32)
 	install(FILES ${META_FILES} DESTINATION ".")
 	install(FILES ${COLORS_FILES} DESTINATION ".")
 	install(FILES ${DOC_RST_FILES} DESTINATION "doc")
-	install(FILES ${DOC_HTML_FILES} DESTINATION "doc")
+	install(FILES ${DOC_HTML_FILES_PACKAGE} DESTINATION "doc")
 	install(FILES ${DOC_IMAGE_FILES} DESTINATION "doc/images")
 	install(FILES ${DUMPNODES_FILES} DESTINATION "dumpnodes")
 	install(PROGRAMS ${DUMPNODES_SCRIPTS} DESTINATION "dumpnodes")
@@ -348,7 +353,7 @@ elseif(CREATE_FLAT_PACKAGE)
 	install(FILES ${META_FILES} DESTINATION ".")
 	install(FILES ${COLORS_FILES} DESTINATION ".")
 	install(FILES ${DOC_RST_FILES} DESTINATION "doc")
-	install(FILES ${DOC_HTML_FILES} DESTINATION "doc")
+	install(FILES ${DOC_HTML_FILES_PACKAGE} DESTINATION "doc")
 	install(FILES ${DOC_IMAGE_FILES} DESTINATION "doc/images")
 	install(FILES ${DUMPNODES_FILES} DESTINATION "dumpnodes")
 	install(PROGRAMS ${DUMPNODES_SCRIPTS} DESTINATION "dumpnodes")
@@ -385,7 +390,7 @@ else(WIN32)
 	install(FILES ${META_FILES} DESTINATION "share/doc/${PROJECT_NAME}" COMPONENT mapper)
 	install(FILES ${COLORS_FILES} DESTINATION "share/games/${PROJECT_NAME}" COMPONENT mapper)
 	install(FILES ${DOC_RST_FILES} DESTINATION "share/doc/${PROJECT_NAME}/doc" COMPONENT mapper)
-	install(FILES ${DOC_HTML_FILES} DESTINATION "share/doc/${PROJECT_NAME}/doc" COMPONENT mapper)
+	install(FILES ${DOC_HTML_FILES_PACKAGE} DESTINATION "share/doc/${PROJECT_NAME}/doc" COMPONENT mapper)
 	install(FILES ${DOC_IMAGE_FILES} DESTINATION "share/doc/${PROJECT_NAME}/doc/images" COMPONENT mapper)
 	install(FILES ${DUMPNODES_FILES} DESTINATION "share/doc/${PROJECT_NAME}/dumpnodes" COMPONENT mapper)
 	install(PROGRAMS ${DUMPNODES_SCRIPTS} DESTINATION "share/doc/${PROJECT_NAME}/dumpnodes" COMPONENT mapper)
