@@ -6,18 +6,18 @@ if(NOT DEFINED USE_RST2HTML)
 	set(USE_RST2HTML -1)
 endif(NOT DEFINED USE_RST2HTML)
 
-SET(ENABLE_HTML_DOCUMENTATION_DOC "Convert rst documents to html or fail")
+SET(REQUIRE_HTML_DOCUMENTATION_DOC "Convert rst documents to html or fail")
 SET(DISABLE_HTML_DOCUMENTATION_DOC "Don't convert rst documents to html")
-OPTION(ENABLE_HTML_DOCUMENTATION ${ENABLE_HTML_DOCUMENTATION_DOC} False)
+OPTION(REQUIRE_HTML_DOCUMENTATION ${REQUIRE_HTML_DOCUMENTATION_DOC} False)
 OPTION(DISABLE_HTML_DOCUMENTATION ${DISABLE_HTML_DOCUMENTATION_DOC} False)
 
 # Find rst to html converter
-if(ENABLE_HTML_DOCUMENTATION AND DISABLE_HTML_DOCUMENTATION)
-	message(WARNING "ENABLE_HTML_DOCUMENTATION and DISABLE_HTML_DOCUMENTATION are both enabled. Reinitializing rst to html conversion.")
-	set(ENABLE_HTML_DOCUMENTATION False CACHE BOOL ${ENABLE_HTML_DOCUMENTATION_DOC} FORCE)
+if(REQUIRE_HTML_DOCUMENTATION AND DISABLE_HTML_DOCUMENTATION)
+	message(WARNING "REQUIRE_HTML_DOCUMENTATION and DISABLE_HTML_DOCUMENTATION are both enabled. Reinitializing rst to html conversion.")
+	set(REQUIRE_HTML_DOCUMENTATION False CACHE BOOL ${REQUIRE_HTML_DOCUMENTATION_DOC} FORCE)
 	set(DISABLE_HTML_DOCUMENTATION False CACHE BOOL ${DISABLE_HTML_DOCUMENTATION_DOC} FORCE)
 	set(USE_RST2HTML -1)
-endif(ENABLE_HTML_DOCUMENTATION AND DISABLE_HTML_DOCUMENTATION)
+endif(REQUIRE_HTML_DOCUMENTATION AND DISABLE_HTML_DOCUMENTATION)
 
 find_package(Docutils)
 if(DOCUTILS_FOUND)
@@ -26,7 +26,7 @@ else(DOCUTILS_FOUND)
 	message(STATUS "Python docutils not found")
 endif(DOCUTILS_FOUND)
 
-if(ENABLE_HTML_DOCUMENTATION)
+if(REQUIRE_HTML_DOCUMENTATION)
 	set(USE_RST2HTML 1)
 	message(STATUS "Conversion of documentation to html enabled as requested")
 elseif(DISABLE_HTML_DOCUMENTATION)
@@ -46,7 +46,7 @@ elseif(USE_RST2HTML EQUAL 0)
 	message(STATUS "Conversion of documentation to html disabled (because disabled previously)")
 elseif(USE_RST2HTML EQUAL 1)
 	message(STATUS "Conversion of documentation to html enabled (because enabled previously)")
-endif(ENABLE_HTML_DOCUMENTATION)
+endif(REQUIRE_HTML_DOCUMENTATION)
 
 if(USE_RST2HTML AND NOT DOCUTILS_FOUND)
 	message(SEND_ERROR "Conversion of documentation to html is enabled, but python docutils was not found.")
@@ -58,6 +58,10 @@ set(USE_RST2HTML ${USE_RST2HTML} CACHE INTERNAL "Internal use - do not modify")
 file(GLOB DOC_RST_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" *.rst)
 string(REPLACE ".rst" ".html" DOC_HTML_FILES "${DOC_RST_FILES}")
 
-add_custom_target(htmldoc ALL DEPENDS ${DOC_HTML_FILES})
+if(USE_RST2HTML)
+	add_custom_target(htmldoc ALL DEPENDS ${DOC_HTML_FILES})
+elseif(NOT USE_RST2HTML AND DOCUTILS_FOUND)
+	add_custom_target(htmldoc DEPENDS ${DOC_HTML_FILES})
+endif(USE_RST2HTML)
 RST2HTML(${DOC_RST_FILES})
 
